home-services/uptime-kuma/uptime-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3001
      targetPort: 3001
  selector:
    app: uptime
