home-services/uptime-kuma/uptime-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: uptime
spec:
  rules:
    - host: "uptime.beetlestone.nz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime
                port:
                  number: 3000
